2000-01-06  Elliot Lee  <sopwith@redhat.com>

	* gnome-icon-list.[ch]: Port to gdk-pixbuf. Switch from a linked list to an array for storing the icons (faster!)
	* gnome-icon-entry.[ch], gnome-icon-sel.[ch]: Port to gdk-pixbuf.

	* gnome-canvas-pixbuf.[ch]: Pull updates from gdk-pixbuf module.

	* gnome-druid.c: When going to a new page, unmap the old one unconditionally.

Wed Jan 05 23:41:20 2000  George Lebl <jirka@5z.com>

	* gnome-client.[ch]: the save_yourself signal has a return value but
	  the gtk_signal_emit wasn't catching it.  So get it and ignore it
	  to avoid segfaults and warnings.

2000-01-05  ERDI Gergo  <cactus@cactus.rulez.org>

	* gnome-about.c: Removed all the hardcoded layout constants and
	used #define's instead. Next step is a complete rewrite using
	GnomeCanvas.

Sat Jan 01 18:58:12 2000  George Lebl <jirka@5z.com>

	* gnome-dentry-edit.c: use LC_MESSAGES category instead of LC_ALL
	  for the message translations of the dentry fields

Wed Dec 29 16:53:35 1999  George Lebl <jirka@5z.com>

	* oafgnome.c: add include for unistd.h and fcntl.h to make this
	  actually compile

1999-12-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi-child.[ch] (gnome_mdi_child_set_toolbar_template):
	new function for setting child's toolbar template.
	(gnome_mdi_child_set_toolbar_position): set default values for
	toolbar insertion.
	(gnome_mdi_child_add_toolbar): adds a toolbar to an app using
	default values stored in the child.
	* gnome-mdi.c (gnome_mdi_view_changed): take care of child's
	toolbar.
	(book_button_release): a fix to get the [view|child]_changed signal
	emitted when a page is dropped on the notebook.
	* gnome-mdiP.h: add a new #define for child's toolbar UIInfo key
	and its name.
	* gnome-mdi.h: indentation improvements.

1999-12-25  Ettore Perazzoli  <ettore@gnu.org>

	[From Morten Welinder <terra@diku.dk>]
	* gnome-app.c (gnome_app_destroy): Unref the dock layout if not
	NULL.

1999-12-21  Iain Holmes  <ih@csd.abdn.ac.uk>
